--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -480,9 +480,16 @@
     <string name="settings_pin_lock_off" context="settings of the pin lock">Disable PIN Lock</string>
     <string name="settings_pin_lock_code" context="settings of the pin lock">PIN Code</string> 
     <string name="settings_pin_lock_code_not_set" context="status text when no custom photo sync folder has been set">Not set</string>
+    <string name="settings_reset_lock_code" context="settings of the pin lock">Reset lock screen</string> 
+    <string name="settings_pin_lock_switch" context="settings of the pin lock">PIN Lock</string>
     
     <string name="pin_lock_enter" context="Button after the pin code input field">Enter</string>
     <string name="pin_lock_incorrect" context="error message when not typing the pin code correctly">Incorrect code</string>
+    <string name="pin_lock_not_match" context="error message when not typing the pin code correctly (two times)">Pin Codes don\'t match</string>
+    <string name="unlock_pin_title" context="title of the screen to unlock screen with pin code">Enter your Pin Code</string>
+    <string name="unlock_pin_title_2" context="title of the screen to unlock screen with pin code in second round">Re-Enter your Pin Code</string>
+     <string name="reset_pin_title" context="title of the screen to unlock screen with pin code">Enter your new Pin Code</string>
+    <string name="reset_pin_title_2" context="title of the screen to unlock screen with pin code in second round">Re-Enter your new Pin Code</string>
     
     <string name="settings_about" context="Caption of a title, in the context of &quot;About MEGA&quot; or &quot;About us&quot;">About</string>
     <string name="settings_about_privacy_policy" context="App means &quot;Application&quot;">Privacy Policy</string>
