--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -481,7 +481,8 @@
     <string name="settings_pin_lock_switch" context="settings of the pin lock">Bloqueo con PIN</string>
     
     <string name="pin_lock_enter" context="Button after the pin code input field">Entrar</string>
-    <string name="pin_lock_incorrect" context="error message when not typing the pin code correctly">Código Incorrecto</string>
+    <string name="pin_lock_incorrect" context="error message when not typing the pin code correctly">Código PIN incorrecto, por favor inténtelo otra vez.</string>
+    <string name="pin_lock_incorrect_alert" context="error message when not typing the pin code correctly">Código PIN incorrecto, por favor inténtelo otra vez. Le quedan %2$d intentos.</string>
     <string name="pin_lock_not_match" context="error message when not typing the pin code correctly (two times)">Los códigos no coinciden</string>
     <string name="unlock_pin_title" context="title of the screen to unlock screen with pin code">Introduce tu código</string>
     <string name="unlock_pin_title_2" context="title of the screen to unlock screen with pin code in second round">Re-introduce tu código</string>
