--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -434,6 +434,12 @@
     <string name="settings_storage" context="Text listed before the amount of storage a user gets with a certain package. For example: &quot;1TB Storage&quot;.">Almacenamiento</string>
     <string name="settings_pin_lock" context="settings category title. Below this title, the pin lock settings start">Bloqueo PIN</string>
     
+    <string name="settings_advanced_features" context="Settings category title for cache and offline files">Opciones avanzadas</string>
+    <string name="settings_advanced_features_cache" context="Settings preference title for cache">Limpiar Caché</string>
+    <string name="settings_advanced_features_offline" context="Settings preference title for offline files">Limpiar Ficheros Disponibles sin Conexión</string>
+    
+        <string name="settings_advanced_features_size" context="Size of files in offline or cache folders">Actuamente en uso %s</string> 
+    
     <string name="settings_storage_download_location" context="title of the setting to set the default download location">Destino descarga por defecto</string>
     <string name="settings_storage_ask_me_always" context="Whether to always ask the user each time.">Preguntar siempre la ruta de descarga</string>
     <string name="settings_storage_advanced_devices" context="Whether to enable the storage in advanced devices">Mostrar dispositivos avanzados (SD externa)</string>
