--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -437,6 +437,12 @@
     <string name="settings_storage" context="Text listed before the amount of storage a user gets with a certain package. For example: &quot;1TB Storage&quot;.">Storage</string>
     <string name="settings_pin_lock" context="settings category title. Below this title, the pin lock settings start">PIN Lock</string>
     
+    <string name="settings_advanced_features" context="Settings category title for cache and offline files">Advanced Features</string>
+    <string name="settings_advanced_features_cache" context="Settings preference title for cache">Clear Cache</string>
+    <string name="settings_advanced_features_offline" context="Settings preference title for offline files">Clear Offline Files</string>
+    
+    <string name="settings_advanced_features_size" context="Size of files in offline or cache folders">Currently using %s</string>    
+    
     <string name="settings_storage_download_location" context="title of the setting to set the default download location">Default download location</string>
     <string name="settings_storage_ask_me_always" context="Whether to always ask the user each time.">Always ask download location</string>
     <string name="settings_storage_advanced_devices" context="Whether to enable the storage in advanced devices">Display advanced devices (external SD)</string>
