--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -447,6 +447,7 @@
     <string name="settings_storage_advanced_devices" context="Whether to enable the storage in advanced devices">Mostrar dispositivos avanzados (SD externa)</string>
     
     <string name="settings_camera_upload_on" context="settings option">Activar Subidas de la Cámara</string>
+    <string name="settings_camera_upload_turn_on" context="settings option">Activar Subidas de la Cámara</string>
     <string name="settings_camera_upload_off" context="settings option">Desactivar las Subidas de la Cámara</string>
     <string name="settings_camera_upload_how_to_upload" context="settings option. How to upload the camera images: via Wi-Fi only or via Wi-Fi and data plan">Como subir</string>
     
