--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -374,7 +374,7 @@
     <string name="my_account_total_space" context="Headline for the amount of total storage space">Storage Space</string>
     <string name="my_account_free_space" context="Headline for the amount of storage space is remaining">Free Space</string>
     <string name="my_account_used_space" context="Headline for the amount of storage space is used">Used Space</string>
-    <string name="my_account_upgrade_pro" context="Button to upgrade the account to PRO account">Upgrade now!</string>
+    <string name="my_account_upgrade_pro" context="Button to upgrade the account to PRO account">Upgrade!</string>
     <string name="my_account_change_password" context="menu item">Change</string>
     <string name="warning_out_space" context="Warning in Cloud Drive when the user is runningut of space">You\'re running out of space!\n Do you want to upgrade your account?</string>
     <string name="get_pro_account" context="Message to promote PRO accounts">You can be a PRO user!\n Do you want to upgrade your account?</string>
