--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -53,7 +53,9 @@
     <string name="confirmation_remove_contact" context="confirmation message before removing a contact. Do not write question mark">Do you want to remove the contact</string>    
     <string name="confirmation_remove_multiple_contacts" context="confirmation message before removing mutiple contacts">Do you want to remove these contacts?</string>  
     <string name="confirmation_move_to_rubbish" context="confirmation message before removing a file">Are you sure you want to move this element to the Rubbish Bin?</string>
+    <string name="confirmation_move_to_rubbish_plural" context="confirmation message before removing a file">Are you sure you want to move these elements to the Rubbish Bin?</string>
     <string name="confirmation_delete_from_mega" context="confirmation message before removing a file">Are you sure you want to delete this element permanently?</string>
+    <string name="confirmation_delete_from_mega_plural" context="confirmation message before removing a file">Are you sure you want to delete these elements permanently?</string>
     <string name="title_delete_from_mega" context="confirmation message before removing a file">Delete from MEGA</string>
     <string name="confirmation_leave_share_folder" context="confirmation message before leaving an incoming shared folder">If you leave the folder, you will not be able to see it again</string>
     
@@ -320,7 +322,11 @@
     <string name="context_no_sent" context="error message when sending a file">Error. File not sent</string>
     <string name="context_no_copied" context="error message">Error. Not copied</string>
     <string name="context_correctly_moved" context="success message when moving a node">Correctly moved</string>
+    <string name="number_correctly_moved" context="success message when moving a node">%d items correctly moved</string>
+    <string name="number_incorrectly_moved" context="success message when moving a node">, %d items not correctly moved</string>
     <string name="context_correctly_moved_to_rubbish" context="success message when moving a node">Correctly sent to Rubbish Bin</string>
+    <string name="number_correctly_moved_to_rubbish" context="success message when moving a node">%d items correctly sent to Rubbish Bin</string>
+    <string name="number_incorrectly_moved_to_rubbish" context="success message when moving a node">, %d items not correctly sent</string>
     <string name="context_no_moved" context="error message">Error. Not moved</string>
     <string name="context_correctly_shared" context="success message when sharing a folder">Correctly shared</string>
     <string name="context_no_shared" context="error message">Error. Not shared</string>
