--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -333,6 +333,12 @@
     <string name="context_no_link" context="error message">Impossible to get the link</string>
     <string name="context_correctly_removed" context="success message when removing a node from MEGA">Correctly removed from MEGA</string>
     <string name="context_no_removed" context="error message">Error. Not removed from MEGA</string>
+    <string name="number_correctly_removed" context="success message when moving a node">%d items correctly removed from MEGA</string>
+    <string name="number_no_removed" context="error message when moving a node">, %d items not correctly removed</string>
+    <string name="number_correctly_sent" context="success message when sending multiple files">%d items correctly sent</string>
+    <string name="number_no_sent" context="error message when sending multiple files">, %d items not sent</string>
+    <string name="number_correctly_copied" context="success message when sending multiple files">%d items correctly copied</string>
+    <string name="number_no_copied" context="error message when sending multiple files">, %d items not copied</string>
     <string name="context_correctly_copied_contact" context="success message when sending a file to a contact">Correctly sent to:</string>
     
     <string name="context_select_one_file" context="option available for just one file">Select just one file.</string>
