--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -337,8 +337,10 @@
     <string name="context_no_removed" context="error message">Error. No se pudo borrar de MEGA</string>
     <string name="number_correctly_removed" context="success message when deleting a node">%d ficheros borrados de MEGA</string>
     <string name="number_no_removed" context="success message when deleting a node">, %d so se han podido borrar</string>
-    <string name="number_correctly_sent" context="success message when sending multiple files">%d ficheros correctamente enviados</string>
-    <string name="number_no_sent" context="error message when sending multiple files">, %d ficheros no se han podido enviar</string>
+    <string name="number_correctly_sent" context="success message when sending multiple files">Fichero correctamente enviado a %d contactos</string>
+    <string name="number_no_sent" context="error message when sending multiple files">, a %d contactos no se ha podido enviar</string>
+    <string name="number_correctly_sent_multifile" context="success message when sending multiple files">%d ficheros correctamente enviados</string>
+    <string name="number_no_sent_multifile" context="error message when sending multiple files">, %d ficheros no se han podido enviar</string>
     <string name="number_correctly_copied" context="success message when sending multiple files">%d ficheros correctamente copiados</string>
     <string name="number_no_copied" context="error message when sending multiple files">, %d ficheros no se han podido copiar</string>
     <string name="number_contact_removed" context="success message when removing several contacts">%d contactos correctamente eliminados</string>
