--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -340,8 +340,10 @@
     <string name="context_no_removed" context="error message">Error. Not removed from MEGA</string>
     <string name="number_correctly_removed" context="success message when moving a node">%d items correctly removed from MEGA</string>
     <string name="number_no_removed" context="error message when moving a node">, %d items not correctly removed</string>
-    <string name="number_correctly_sent" context="success message when sending multiple files">%d items correctly sent</string>
-    <string name="number_no_sent" context="error message when sending multiple files">, %d items not sent</string>
+    <string name="number_correctly_sent" context="success message when sending multiple files">File correctly sent to %d contacts</string>
+    <string name="number_no_sent" context="error message when sending multiple files">, not sent to %d contacts</string>
+    <string name="number_correctly_sent_multifile" context="success message when sending multiple files">%d files correctly sent</string>
+    <string name="number_no_sent_multifile" context="error message when sending multiple files">, %d files not sent</string>
     <string name="number_correctly_copied" context="success message when sending multiple files">%d items correctly copied</string>
     <string name="number_no_copied" context="error message when sending multiple files">, %d items not copied</string>
     <string name="number_contact_removed" context="success message when removing several contacts">%d contacts correctly removed</string>
